--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <p>Hello there</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+        <h1>Elena Poddighe</h1>
+        <h2 class="mb-3">Front-end developer based in Barcelona, Spain</h2>
+        <div>
+            <a href="#" class="btn btn-branding">Contact me</a>
+        </div>
 
+    </div>
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/072/original/DSC_5662.jpg?1703242672"
+        alt="" width="600">
 </body>
 
 </html>
