--- a/index.html
+++ b/index.html
@@ -20,16 +20,72 @@
 </head>
 
 <body>
+
+    <hr>
+
     <div class="hero">
         <h1>Elena Poddighe</h1>
         <h2 class="mb-3">Front-end developer based in Barcelona, Spain</h2>
         <div>
             <a href="#" class="btn btn-branding">Contact me</a>
         </div>
-
     </div>
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/072/original/DSC_5662.jpg?1703242672"
-        alt="" width="600">
+
+    <hr>
+
+    <div class="container-fluid ms-0 me-0 mt-0 pt-3">
+        <div class="row">
+            <div class="col-md-4 ps-4 basic-info">
+                <h3>Something about me 🎯</h3>
+                <p>🇮🇹 Born and raised
+                    </br>
+                    💁🏻‍♀️ Millennial generation
+                    </br>
+                    4️⃣ Countries I lived in: 🇮🇹 🇫🇷 🇧🇪 🇪🇸
+                    </br>
+                    4️⃣ Languages: 🇮🇹 🇬🇧 🇪🇸 🇫🇷
+                    </br>
+                    📚 Master's Degree in International Relations @ UCLouvain, 🇧🇪
+                    </br>
+                    📚 Bachelor's Degree in International Relations @ UNISS, 🇮🇹
+                    </br>
+                </p>
+            </div>
+            <div class="col-md-4 text-center"><img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/072/original/DSC_5662.jpg?1703242672"
+                    alt="" max-width="100%" class="img-fluid rounded"></div>
+            <div class="col-md-4 ps-4 basic-info">
+                <h3>Things I 💙 </h3>
+                <p>📖 Reading & Studying
+                    </br>
+                    💻 coding
+                    </br>
+                    🎒 Travelling
+                    </br>
+                    🎭 <a href="https://www.instagram.com/teatro_ita_barcelona/?hl=it"
+                        title="Compagnia Italiana Teatrale di Barcelona" target="_blank" class="theater-link">Theater
+                        classes</a>
+                    </br>
+                    🍿 Movies
+                    </br>
+                    📸 Photography
+                    </br>
+                    🇧🇪 🍺 Favorite drink
+                    </br>
+                    🍝 Lover
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="mt-3">
+
+        <p class="social-links">
+            <a href="https://www.linkedin.com/in/elena-poddighe-736276104/" title="Elena's LinkedIn Profile"
+                target="_blank"><i class="fa-brands fa-linkedin me-5"></i></a>
+            <a href="https://github.com/elenapoddighe" title="Elena's GitHub Profile" target="_blank">
+                <i class="fa-brands fa-github"></i></a>
+        </p>
+    </div>
 </body>
 
 </html>
