--- a/index.html
+++ b/index.html
@@ -86,6 +86,111 @@
                 <i class="fa-brands fa-github"></i></a>
         </p>
     </div>
+
+    <hr>
+    <div class="main">
+        <h2 class="pt-3 text-center pt-4 mb-4"> A quick glimpse at my projects</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6"><img src="/images/weather.png" alt="Weather App Image" max-width="100%"
+                        class="img-fluid rounded"></div>
+                <div class="col-md-6">
+                    <h3 class="text-center weather-app">Weather App</h3>
+                    <p>This was the first big and complex project I worked on. It is the final
+                        project of the <a
+                            href="https://www.shecodes.io/cohorts/shecodes-plus-052d8685-ed05-4bb6-a1cd-976b8dd88b9f/projects/1962524"
+                            title="Elena's SheCodes Plus final project" class="links-to-courses">
+                            <em>SheCodes Plus</em></a> course. I tried to build this weather application in a modern
+                        way, adding
+                        some small details that would make it user-friendly and nice to use.
+
+                        </br>
+
+                        By using it, you will know
+                        the weather details of you preferred location, and you will also get some bonus reminders to
+                        help you deal with it. So...no more forgetting your umbrella at home when it's going to
+                        rain...no more burning your skin under the super hot summer sun...no more leaving that
+                        incredibly useful bottle of water at home...and so on...You are welcome, enjoy the app! 😎
+                        </br>
+                        This website was built using:
+                        </br>
+                    <div class="text-center">
+                        <i class="fa-brands fa-html5 me-5"></i>
+                        <i class="fa-brands fa-css3-alt me-5"></i>
+                        <i class="fa-brands fa-js"></i>
+                    </div>
+                    </p>
+                    <div class="text-center">
+                        <a href="https://elenas-awesome-weather-app.netlify.app/" title="Elena's Weather App"
+                            class="btn weather-button" target="_blank">Check it out</a>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="row mt-5">
+
+                <div class="col-md-6">
+                    <h3 class="text-center world-clock-app">World Clock App</h3>
+                    <p>This was my second big project, the final result of my <a
+                            href="https://www.shecodes.io/cohorts/shecodes-plus-add-on-ea8cf9d7-9957-4b7c-968b-d3b3768f1243/projects/1969387"
+                            title="Elena's SheCodes Plus Add-on final project" class="links-to-courses">
+                            <em>SheCodes Plus Add-on</em></a> course. Choose a location and
+                        get information about the date and time there. It isn't a particularly complete
+                        application as of now, as many locations are missing. Consider it a work in progress built on
+                        solid pillars.
+
+                        </br>
+                        This website was built using:
+                        </br>
+                    <div class="text-center">
+                        <i class="fa-brands fa-html5 me-5"></i>
+                        <i class="fa-brands fa-css3-alt me-5"></i>
+                        <i class="fa-brands fa-js"></i>
+                    </div>
+                    </p>
+                    <div class="text-center">
+                        <a href="https://elenas-world-clock-app.netlify.app/" title="Elena's Weather App"
+                            class="btn world-clock-button" target="_blank">Check it out</a>
+                    </div>
+
+                </div>
+                <div class="col-md-6"><img src="/images/worldclock.png" alt="Weather App Image" max-width="100%"
+                        class="img-fluid rounded">
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-md-6"><img src="images/airecipesgenerator.png" alt="Weather App Image" max-width="100%"
+                        class="img-fluid rounded">
+                </div>
+                <div class="col-md-6">
+                    <h3 class="text-center ai-generator-app">AI Generator App</h3>
+                    <p>My first ever project with AI! This was the final result of my <a
+                            href="https://www.shecodes.io/cohorts/shecodes-ai-add-on-42447aef-f190-42ab-87d2-b8eaa1f6a1f0/projects/1982802"
+                            title="Elena's SheCodes AI Add-on final project" class="links-to-courses">
+                            <em>SheCodes AI Add-on</em></a> course. Choose your main ingredient and discover simple and
+                        tasty recipes. 😋
+                        </br>
+                        This website was built using:
+                        </br>
+                    <div class="text-center">
+                        <i class="fa-brands fa-html5 me-5"></i>
+                        <i class="fa-brands fa-css3-alt me-5"></i>
+                        <i class="fa-brands fa-js"></i>
+                    </div>
+                    </p>
+                    <div class="text-center">
+                        <a href="https://elenas-ai-generator.netlify.app/" title="Elena's Weather App"
+                            class="btn ai-generator-button" target="_blank">Check it out</a>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
