--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                     </br>
                 </p>
             </div>
-            <div class="col-md-4 text-center"><img
-                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/072/original/DSC_5662.jpg?1703242672"
-                    alt="" max-width="100%" class="img-fluid rounded"></div>
+            <div class="col-md-4 text-center"><img src="images/DSC_5662.jpg" alt="" max-width="100%"
+                    class="img-fluid rounded elena-first-pic"></div>
             <div class="col-md-4 ps-4 basic-info">
                 <h3>Things I 💙 </h3>
                 <p>📖 Reading & Studying
@@ -160,7 +159,7 @@
                 </div>
             </div>
 
-            <div class="row mt-5">
+            <div class="row mt-5 pb-5">
                 <div class="col-md-6"><img src="images/airecipesgenerator.png" alt="Weather App Image" max-width="100%"
                         class="img-fluid rounded">
                 </div>
