--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid ms-0 me-0 mt-0 pt-3">
         <div class="row">
             <div class="col-md-4 ps-4 basic-info">
-                <h3>Something about me 🎯</h3>
+                <h3 class="basic-info-title">Something about me 🎯</h3>
                 <p>🇮🇹 Born and raised
                     </br>
                     💁🏻‍♀️ Millennial generation
@@ -54,7 +54,7 @@
             <div class="col-md-4 text-center"><img src="images/DSC_5662.jpg" alt="" max-width="100%"
                     class="img-fluid rounded elena-first-pic"></div>
             <div class="col-md-4 ps-4 basic-info">
-                <h3>Things I 💙 </h3>
+                <h3 class="basic-info-title">Things I 💙 </h3>
                 <p>📖 Reading & Studying
                     </br>
                     💻 coding
@@ -189,6 +189,16 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        This website was coded by <a href="https://github.com/elenapoddighe" target="_blank"
+            title="Elena's GitHub profile">Elena
+            Poddighe</a>, it is open-sourced on
+        <a href="https://github.com/elenapoddighe/portfolio-project" target="blank"
+            title="Project page on GitHub">GitHub</a> and it is
+        hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank"
+            title="Netlify page">Netlify</a>.
+    </footer>
 
 </body>
 
