--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="container-fluid ms-0 me-0 mt-0 pt-3">
         <div class="row">
-            <div class="col-md-4 ps-4 basic-info">
+            <div class="col d-none d-lg-block">
                 <h3 class="basic-info-title">Something about me 🎯</h3>
                 <p>🇮🇹 Born and raised
                     </br>
@@ -53,7 +53,7 @@
             </div>
             <div class="col-md-4 text-center"><img src="images/DSC_5662.jpg" alt="" max-width="100%"
                     class="img-fluid rounded elena-first-pic"></div>
-            <div class="col-md-4 ps-4 basic-info">
+            <div class="col d-none d-lg-block">
                 <h3 class="basic-info-title">Things I 💙 </h3>
                 <p>📖 Reading & Studying
                     </br>
@@ -91,8 +91,8 @@
         <h2 class="pt-3 text-center pt-4 mb-4"> A quick glimpse at my projects</h2>
         <div class="container">
             <div class="row">
-                <div class="col-md-6"><img src="/images/weather.png" alt="Weather App Image" max-width="100%"
-                        class="img-fluid rounded"></div>
+                <div class="col d-none d-lg-block"><img src="/images/weather.png" alt="Weather App Image"
+                        max-width="100%" class="img-fluid rounded"></div>
                 <div class="col-md-6">
                     <h3 class="text-center weather-app">Weather App</h3>
                     <p>This was the first big and complex project I worked on. It is the final
@@ -154,14 +154,14 @@
                     </div>
 
                 </div>
-                <div class="col-md-6"><img src="/images/worldclock.png" alt="Weather App Image" max-width="100%"
-                        class="img-fluid rounded">
+                <div class="col d-none d-lg-block"><img src="/images/worldclock.png" alt="Weather App Image"
+                        max-width="100%" class="img-fluid rounded">
                 </div>
             </div>
 
             <div class="row mt-5 pb-5">
-                <div class="col-md-6"><img src="images/airecipesgenerator.png" alt="Weather App Image" max-width="100%"
-                        class="img-fluid rounded">
+                <div class="col d-none d-lg-block"><img src="images/airecipesgenerator.png" alt="Weather App Image"
+                        max-width="100%" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
                     <h3 class="text-center ai-generator-app">AI Generator App</h3>
