Worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="container-fluid ms-0 me-0 mt-0 pt-3">
         <div class="row">
-            <div class="col d-none d-lg-block">
+            <div class="col d-none d-lg-block basic-info">
                 <h3 class="basic-info-title">Something about me 🎯</h3>
                 <p>🇮🇹 Born and raised
                     </br>
@@ -53,7 +53,7 @@
             </div>
             <div class="col-md-4 text-center"><img src="images/DSC_5662.jpg" alt="" max-width="100%"
                     class="img-fluid rounded elena-first-pic"></div>
-            <div class="col d-none d-lg-block">
+            <div class="col d-none d-lg-block basic-info">
                 <h3 class="basic-info-title">Things I 💙 </h3>
                 <p>📖 Reading & Studying
                     </br>
@@ -137,7 +137,7 @@
                             <em>SheCodes Plus Add-on</em></a> course. Choose a location and
                         get information about the date and time there. It isn't a particularly complete
                         application as of now, as many locations are missing. Consider it a work in progress built on
-                        solid pillars.
+                        solid pillars. 🚧
 
                         </br>
                         This website was built using:
