--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row">
                 <div class="col d-none d-lg-block"><img src="/images/weather.png" alt="Weather App Image"
-                        max-width="100%" class="img-fluid rounded"></div>
+                        max-width="100%" class="img-fluid rounded weather-app-image"></div>
                 <div class="col-md-6">
                     <h3 class="text-center weather-app">Weather App</h3>
                     <p>This was the first big and complex project I worked on. It is the final
@@ -155,13 +155,13 @@
 
                 </div>
                 <div class="col d-none d-lg-block"><img src="/images/worldclock.png" alt="Weather App Image"
-                        max-width="100%" class="img-fluid rounded">
+                        max-width="100%" class="img-fluid rounded world-clock-app-image">
                 </div>
             </div>
 
             <div class="row mt-5 pb-5">
                 <div class="col d-none d-lg-block"><img src="images/airecipesgenerator.png" alt="Weather App Image"
-                        max-width="100%" class="img-fluid rounded">
+                        max-width="100%" class="img-fluid rounded ai-generator-app-image">
                 </div>
                 <div class="col-md-6">
                     <h3 class="text-center ai-generator-app">AI Generator App</h3>
