--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
     <hr>
     <div class="main">
-        <h2 class="pt-3 text-center pt-4 mb-4"> A quick glimpse at my projects</h2>
+        <h2 class="pt-3 text-center pt-4 mb-5"> A quick glimpse at my projects</h2>
         <div class="container">
-            <div class="row">
+            <div class="row pb-3">
                 <div class="col d-none d-lg-block"><img src="/images/weather.png" alt="Weather App Image"
                         max-width="100%" class="img-fluid rounded weather-app-image"></div>
                 <div class="col-md-6">
@@ -127,8 +127,7 @@
                 </div>
             </div>
 
-            <div class="row mt-5">
-
+            <div class="row mt-5 pb-3">
                 <div class="col-md-6">
                     <h3 class="text-center world-clock-app">World Clock App</h3>
                     <p>This was my second big project, the final result of my <a
@@ -152,7 +151,6 @@
                         <a href="https://elenas-world-clock-app.netlify.app/" title="Elena's Weather App"
                             class="btn world-clock-button" target="_blank">Check it out</a>
                     </div>
-
                 </div>
                 <div class="col d-none d-lg-block"><img src="/images/worldclock.png" alt="Weather App Image"
                         max-width="100%" class="img-fluid rounded world-clock-app-image">
