--- a/about.html
+++ b/about.html
@@ -20,28 +20,34 @@
 </head>
 
 <body>
-    <div class="about-header mt-5 pt-3">
+    <div class="about-header mt-5 p-3">
         <h1 class="text-center ">👋
             <br>
             I am Elena Poddighe
         </h1>
 
         <img src="/images/DSC_5645.jpg" alt="Elena's picture" class="img-fluid about-pic mt-5 rounded">
-        <div class="text-center">
-            <a href="#" class="btn btn-branding mt-5">Contact me</a>
+
+        <div>
+            <div class="text-center">
+                <a href="#" class="btn btn-branding mt-5">Contact me</a>
+            </div>
         </div>
 
-        <div class="mt-3">
+    </div>
+    </div>
 
-            <p class="social-links">
-                <a href="https://www.linkedin.com/in/elena-poddighe-736276104/" title="Elena's LinkedIn Profile"
-                    target="_blank"><i class="fa-brands fa-linkedin me-5"></i></a>
-                <a href="https://github.com/elenapoddighe" title="Elena's GitHub Profile" target="_blank">
-                    <i class="fa-brands fa-github"></i></a>
-            </p>
-        </div>
+    <div class="mt-3">
 
-        <hr>
+        <p class="social-links">
+            <a href="https://www.linkedin.com/in/elena-poddighe-736276104/" title="Elena's LinkedIn Profile"
+                target="_blank"><i class="fa-brands fa-linkedin me-5"></i></a>
+            <a href="https://github.com/elenapoddighe" title="Elena's GitHub Profile" target="_blank">
+                <i class="fa-brands fa-github"></i></a>
+        </p>
+    </div>
+
+    <hr>
 
     </div>
     <h2 class="text-center mt-5 mb-5">My life journey</h2>
@@ -63,12 +69,13 @@
                     started my Political Sciences studying journey, with a focus on International Relations.
                 </p>
             </div>
-            <div class="col-md-6"><img src="/images/anthony-dean-Ap3J1duOqTU-unsplash.jpg" alt="Sardinia pic"
-                    title="A bit of Sardinia" class="img-fluid rounded sardinia-pic" max-width="100%">
+            <div class="col d-none d-lg-block"><img src="/images/anthony-dean-Ap3J1duOqTU-unsplash.jpg"
+                    alt="Sardinia pic" title="A bit of Sardinia" class="img-fluid rounded sardinia-pic"
+                    max-width="100%">
             </div>
         </div>
         <div class="row mb-5">
-            <div class="col-md-6">
+            <div class="col d-none d-lg-block">
                 <div class="row">
                     <div class="col-md-6">
                         <img src="/images/fabe-collage-diqJhQtHHNk-unsplash.jpg" alt="Grenoble"
@@ -103,8 +110,8 @@
                     What now? While I secure my next professional step in the business world, I am a front-end developer
                     student @SheCodes. You are currently visiting the final project of my 6th workshop.</p>
             </div>
-            <div class="col-md-6"><img src="/images/j-shim-FtOHpWWoLHk-unsplash.jpg" alt="Barcelona's Triumph Arc"
-                    title="A bit of Barcelona" class="img-fluid rounded barcelona-pic">
+            <div class="col d-none d-lg-block"><img src="/images/j-shim-FtOHpWWoLHk-unsplash.jpg"
+                    alt="Barcelona's Triumph Arc" title="A bit of Barcelona" class="img-fluid rounded barcelona-pic">
             </div>
 
         </div>
