Inserted navbar everywhere

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,39 @@
 </head>
 
 <body>
-    <h1 class="text-center">🤝 Let's get in touch! 🤝</h1>
+
+    <nav class="navbar navbar-expand-lg navbar-bg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light inactive" href="/index.html">Elena Poddighe</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/about.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/work.html">
+                            My projects
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light active" href="/contact.html">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <hr>
+
+    <h1 class="text-center mt-5">🤝 Let's get in touch! 🤝</h1>
     <p class="contact-paragraph mt-5 text-center">Thank you for taking the time to explore my portoflio website.
         </br>
         If you
@@ -30,10 +62,36 @@
         with me, send me an email:
     </p>
     <br>
-    <p class="text-center"> <a href="mailto:podd.elena@gmail.com" class="contact-email">
+    <p class="text-center mb-5"> <a href="mailto:podd.elena@gmail.com" class="contact-email">
             podd.elena@gmail.com </a>
     </p>
 
+    <hr>
+
+
+    <div class="social-container pt-3 pb-3">
+        <p class="text-center">Find me also on:</p>
+        <div class="text-center">
+            <a href="https://www.linkedin.com/in/elena-poddighe-736276104/" title="Elena's LinkedIn Profile"
+                target="_blank"><i class="fa-brands fa-linkedin me-5"></i></a>
+            <a href="https://github.com/elenapoddighe" title="Elena's GitHub Profile" target="_blank">
+                <i class="fa-brands fa-github me-5"></i></a>
+            <a href="https://www.instagram.com/elenapddg/?hl=it" title="Elena's Instagram Profile" target="_blank">
+                <i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </div>
+
+    <hr>
+
+    <footer class="pt-3">
+        This website was coded by <a href="https://github.com/elenapoddighe" target="_blank"
+            title="Elena's GitHub profile">Elena
+            Poddighe</a>, it is open-sourced on
+        <a href="https://github.com/elenapoddighe/portfolio-project" target="blank"
+            title="Project page on GitHub">GitHub</a> and it is
+        hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank"
+            title="Netlify page">Netlify</a>.
+    </footer>
 
 </body>
 
