--- a/about.html
+++ b/about.html
@@ -20,7 +20,39 @@
 </head>
 
 <body>
-    <div class="about-header mt-5 p-3">
+
+    <nav class="navbar navbar-expand-lg navbar-bg-index">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light inactive" href="/index.html">Elena Poddighe</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light active" href="/about.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/work.html">
+                            My projects
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/contact.html">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <hr>
+
+    <div class="about-header p-3">
         <h1 class="text-center ">👋
             <br>
             I am Elena Poddighe
@@ -34,18 +66,18 @@
             </div>
         </div>
 
-    </div>
+        <div class="mt-3">
+
+            <p class="social-links">
+                <a href="https://www.linkedin.com/in/elena-poddighe-736276104/" title="Elena's LinkedIn Profile"
+                    target="_blank"><i class="fa-brands fa-linkedin me-5"></i></a>
+                <a href="https://github.com/elenapoddighe" title="Elena's GitHub Profile" target="_blank">
+                    <i class="fa-brands fa-github"></i></a>
+            </p>
+        </div>
     </div>
 
-    <div class="mt-3">
 
-        <p class="social-links">
-            <a href="https://www.linkedin.com/in/elena-poddighe-736276104/" title="Elena's LinkedIn Profile"
-                target="_blank"><i class="fa-brands fa-linkedin me-5"></i></a>
-            <a href="https://github.com/elenapoddighe" title="Elena's GitHub Profile" target="_blank">
-                <i class="fa-brands fa-github"></i></a>
-        </p>
-    </div>
 
     <hr>
 
