--- a/index.html
+++ b/index.html
@@ -21,6 +21,35 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-bg-index">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light active" href="/index.html">Elena Poddighe</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-light active" aria-current="page" href="/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/about.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/work.html">
+                            My projects
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/contact.html">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <hr>
 
     <div class="hero">
