--- a/work.html
+++ b/work.html
@@ -20,7 +20,39 @@
 </head>
 
 <body>
-    <header class="text-center mb-5">
+
+    <nav class="navbar navbar-expand-lg navbar-bg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light inactive" href="/index.html">Elena Poddighe</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/about.html">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light active" href="/work.html">
+                            My projects
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light inactive" href="/contact.html">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <hr>
+
+    <header class="text-center mt-3 mb-3">
         <h1>My coding journey</h1>
     </header>
 
