--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-bg-index">
         <div class="container-fluid">
-            <a class="navbar-brand text-light active" href="/index.html">Elena Poddighe</a>
+            <a class="navbar-brand text-light active" href="/index.html" title="Welcome to Elena's homepage">Elena
+                Poddighe</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -32,18 +33,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-light active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link text-light active" aria-current="page" href="/index.html"
+                            title="Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/about.html">About me</a>
+                        <a class="nav-link text-light inactive" href="/about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/work.html">
+                        <a class="nav-link text-light inactive" href="/work.html" title="My projects">
                             My projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/contact.html">Contact me</a>
+                        <a class="nav-link text-light inactive" href="/contact.html" title="Contact me">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +58,7 @@
         <h1>Elena Poddighe</h1>
         <h2 class="mb-3">Front-end developer based in Barcelona, Spain</h2>
         <div>
-            <a href="#" class="btn btn-branding">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding">Contact me</a>
         </div>
     </div>
 
