--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                 </p>
             </div>
         </div>
-        <div class="row mb-3">
+        <div class="row mb-5">
             <div class="col-md-6">
                 <h3 class="about-titles">Professional life 💼</h3>
                 <p class="about-paragraphs">In 2018, I moved to Spain in search of a new life adventure and, possibly, a
@@ -149,14 +149,25 @@
         </div>
     </div>
 
-    <footer class="about-footer pt-3 pb-3 mb-0">
-        This website was coded by <a href="https://github.com/elenapoddighe" target="_blank"
-            title="Elena's GitHub profile">Elena
-            Poddighe</a>, it is open-sourced on
-        <a href="https://github.com/elenapoddighe/portfolio-project" target="blank"
-            title="Project page on GitHub">GitHub</a> and it is
+    <hr>
+
+    <footer class="about-footer pt-5 pb-5">
+        This website was coded by Elena Poddighe, it is open-sourced on GitHub and it is
         hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank"
             title="Netlify page">Netlify</a>.
+
+        <div>
+            <div class="text-center mt-3">
+                <a href="https://www.linkedin.com/in/elena-poddighe-736276104/" title="Elena's LinkedIn Profile"
+                    target="_blank"><i class="fa-brands fa-linkedin me-5"></i></a>
+                <a href="https://github.com/elenapoddighe" title="Elena's GitHub Profile" target="_blank">
+                    <i class="fa-brands fa-github me-5"></i></a>
+                <a href="https://www.instagram.com/elenapddg/?hl=it" title="Elena's Instagram Profile" target="_blank">
+                    <i class="fa-brands fa-instagram me-5"></i></a>
+                <a href="mailto:podd.elena@gmail.com" title="Contact Elena via email" target="_blank">
+                    <i class="fa-solid fa-envelope "></i></a>
+            </div>
+        </div>
     </footer>
 
 </body>
