More footer changes

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="pt-5 pb-5">
         This website was coded by Elena Poddighe, it is open-sourced on GitHub and it is
         hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank"
             title="Netlify page">Netlify</a>.
