--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Elena Poddighe is a business professional with 4+ years of working experience. Curious by nature and in search of continous challenges, Elena became a front-end development student at the end of 2023. She is now progressing through the course, learning new coding skills daily.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -23,7 +25,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-bg-index">
         <div class="container-fluid">
-            <a class="navbar-brand text-light inactive" href="/index.html">Elena Poddighe</a>
+            <a class="navbar-brand text-light inactive" href="/index.html" title="Go to Elena's Homepage">Elena
+                Poddighe</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -32,18 +35,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html"
+                            title="Back to Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light active" href="/about.html">About me</a>
+                        <a class="nav-link text-light active" href="/about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/work.html">
+                        <a class="nav-link text-light inactive" href="/work.html" title="My projects">
                             My projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/contact.html">Contact me</a>
+                        <a class="nav-link text-light inactive" href="/contact.html" title="Contact me">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -58,11 +62,12 @@
             I am Elena Poddighe
         </h1>
 
-        <img src="/images/DSC_5645.jpg" alt="Elena's picture" class="img-fluid about-pic mt-5 rounded">
+        <img src="/images/DSC_5645.jpg" alt="Elena's picture" class="img-fluid about-pic mt-5 rounded"
+            title="Elena's pic">
 
         <div>
             <div class="text-center">
-                <a href="#" class="btn btn-branding mt-5">Contact me</a>
+                <a href="/contact.html" class="btn btn-branding mt-5" title="Contact Elena">Contact me</a>
             </div>
         </div>
 
@@ -76,8 +81,6 @@
             </p>
         </div>
     </div>
-
-
 
     <hr>
 
