--- a/work.html
+++ b/work.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Elena Poddighe is a business professional with 4+ years of working experience. Curious by nature and in search of continous challenges, Elena became a front-end development student at the end of 2023. She is now progressing through the course, learning new coding skills daily.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -23,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-bg">
         <div class="container-fluid">
-            <a class="navbar-brand text-light inactive" href="/index.html">Elena Poddighe</a>
+            <a class="navbar-brand text-light inactive" href="/index.html" title="Elena's Homepage">Elena Poddighe</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -32,18 +34,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html"
+                            title="Back to Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/about.html">About me</a>
+                        <a class="nav-link text-light inactive" href="/about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light active" href="/work.html">
+                        <a class="nav-link text-light active" href="/work.html" title="My projects">
                             My projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/contact.html">Contact me</a>
+                        <a class="nav-link text-light inactive" href="/contact.html" title="Contact me">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -65,49 +68,49 @@
             <div class="row mb-4">
                 <div class="col-md-4">
                     <img src="/images/airecipesgenerator.png" alt="AI recipe generator image"
-                        class="img-fluid custom-work-images-first-row rounded">
+                        class="img-fluid custom-work-images-first-row rounded" title="AI app preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes AI Add-on</em>
                         workshop</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/5d654ef6125ffbd0fcfdf4c79305b5dd"
-                                target="_blank" class="btn work-buttons mt-1">Certificate</a>
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
                             <a href="https://elenas-ai-generator.netlify.app/" target="_blank"
-                                class="btn work-buttons mt-1">Project</a>
+                                class="btn work-buttons mt-1" title="Check the project">Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <img src="/images/worldclock.png" alt="World clock app image"
-                        class="img-fluid custom-work-images-first-row rounded">
+                        class="img-fluid custom-work-images-first-row rounded" title="World clock app preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Plus Add-on</em>
                         workshop</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/92a77337759b928d4ffcef544b19912e"
-                                target="_blank" class="btn work-buttons mt-1">Certificate</a>
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
                             <a href="https://elenas-world-clock-app.netlify.app/" target="_blank"
-                                class="btn work-buttons mt-1">Project</a>
+                                class="btn work-buttons mt-1" title="Check the project">Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <img src="/images/weather.png" alt="Weather app image"
-                        class="img-fluid custom-work-images-first-row rounded">
+                        class="img-fluid custom-work-images-first-row rounded" title="Weather app preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Plus</em>
                         workshop</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/4937b894b48f98efc773cc7ac8ae7319"
-                                target="_blank" class="btn work-buttons mt-1">Certificate</a>
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
                             <a href="https://elenas-awesome-weather-app.netlify.app/" target="_blank"
-                                class="btn work-buttons mt-1">Project</a>
+                                class="btn work-buttons mt-1" title="Check my project">Project</a>
                         </div>
                     </div>
                 </div>
@@ -120,33 +123,33 @@
             <div class="row">
                 <div class="col-md-6">
                     <img src="images/theaterproject.png" alt="Theater project image"
-                        class="img-fluid custom-work-images-second-row rounded">
+                        class="img-fluid custom-work-images-second-row rounded" title="Theater website preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basics Add-On</em>
                         workshop</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/2463a23fa3ebc907152fcaaa5423b5a0"
-                                target="_blank" class="btn work-buttons mt-1">Certificate</a>
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-09e58a78-3f20-4854-9a88-60a92ec66de6/projects/1919526"
-                                target="_blank" class="btn work-buttons mt-1">Project</a>
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <img src="images/beerproject.png" alt="Beer project image"
-                        class="img-fluid custom-work-images-second-row rounded">
+                        class="img-fluid custom-work-images-second-row rounded" title="Beer project website preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basics</em>
                         workshop</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/59b13d08bcfed3d8f962ebd859642a24"
-                                target="_blank" class="btn work-buttons mt-1">Certificate</a>
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/cohorts/shecodes-basics-35ead7f0-c41d-4fd6-9906-dd9dbd445eaa/projects/1910692"
-                                target="_blank" class="btn work-buttons mt-1">Project</a>
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
                         </div>
                     </div>
                 </div>
