--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Elena Poddighe is a business professional with 4+ years of working experience. Curious by nature and in search of continous challenges, Elena became a front-end development student at the end of 2023. She is now progressing through the course, learning new coding skills daily.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -58,7 +60,7 @@
         <h1>Elena Poddighe</h1>
         <h2 class="mb-3">Front-end developer based in Barcelona, Spain</h2>
         <div>
-            <a href="/contact.html" class="btn btn-branding">Contact me</a>
+            <a href="/contact.html" title="Contact Elena" class="btn btn-branding">Contact me</a>
         </div>
     </div>
 
@@ -82,7 +84,7 @@
                     </br>
                 </p>
             </div>
-            <div class="col-md-4 text-center"><img src="images/DSC_5662.jpg" alt="" max-width="100%"
+            <div class="col-md-4 text-center"><img src="images/DSC_5662.jpg" title="Elena's pic" max-width="100%"
                     class="img-fluid rounded elena-first-pic"></div>
             <div class="col d-none d-lg-block basic-info">
                 <h3 class="basic-info-title">Things I 💙 </h3>
@@ -123,7 +125,7 @@
         <div class="container">
             <div class="row pb-3">
                 <div class="col d-none d-lg-block"><img src="/images/weather.png" alt="Weather App Image"
-                        max-width="100%" class="img-fluid rounded weather-app-image"></div>
+                        max-width="100%" class="img-fluid rounded weather-app-image" title="Weather app preview"></div>
                 <div class="col-md-6">
                     <h3 class="text-center weather-app">Weather App</h3>
                     <p>This was the first big and complex project I worked on. It is the final
@@ -179,18 +181,20 @@
                     </div>
                     </p>
                     <div class="text-center">
-                        <a href="https://elenas-world-clock-app.netlify.app/" title="Elena's Weather App"
+                        <a href="https://elenas-world-clock-app.netlify.app/" title="Elena's World Clock App"
                             class="btn world-clock-button" target="_blank">Check it out</a>
                     </div>
                 </div>
                 <div class="col d-none d-lg-block"><img src="/images/worldclock.png" alt="Weather App Image"
-                        max-width="100%" class="img-fluid rounded world-clock-app-image">
+                        max-width="100%" class="img-fluid rounded world-clock-app-image"
+                        title="World Clock app preview">
                 </div>
             </div>
 
             <div class="row mt-5 pb-5">
                 <div class="col d-none d-lg-block"><img src="images/airecipesgenerator.png" alt="Weather App Image"
-                        max-width="100%" class="img-fluid rounded ai-generator-app-image">
+                        max-width="100%" class="img-fluid rounded ai-generator-app-image"
+                        title="AI recipe generator app preview">
                 </div>
                 <div class="col-md-6">
                     <h3 class="text-center ai-generator-app">AI Generator App</h3>
@@ -209,7 +213,7 @@
                     </div>
                     </p>
                     <div class="text-center">
-                        <a href="https://elenas-ai-generator.netlify.app/" title="Elena's Weather App"
+                        <a href="https://elenas-ai-generator.netlify.app/" title="Elena's AI App"
                             class="btn ai-generator-button" target="_blank">Check it out</a>
                     </div>
 
@@ -221,7 +225,7 @@
 
     <footer class="pt-5 pb-5">
         This website was coded by Elena Poddighe, it is open-sourced on GitHub and it is
-        hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank"
+        hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank" title="Netlify page"
             title="Netlify page">Netlify</a>.
 
         <div>
